Revert "check fix for jumping height"
This reverts commit 73637abecb9e8ccf66974481fedafb6b0dd9ea6d.

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -65,5 +65,4 @@ body {
   background-position: center;
   background-size: cover;
   z-index: -1;
-  transition: height 999999s;
 }
